--- a/src/pages/detailedPage.css
+++ b/src/pages/detailedPage.css
@@ -62,3 +62,16 @@ h3 { /* Question headers*/
     background-color: var(--background-color);
     color: var(--text-color);
 }
+
+
+.quiz-desc-header {
+    margin: 20px;
+    width: 95%;
+    height: auto;
+    padding: 20px;
+    border: solid 1px grey;
+    text-align: center;
+    border-radius: 5px;
+    overflow: overlay;
+    box-shadow: 10px 5px 5px rgb(86, 86, 86);
+}
